force-app/main/default/objects/Unit__c/fields/Agreement_Value_Deviation__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Value_Deviation__c</fullName>
    <formula>Market_Value__c / 1.1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula to Calculate : Deviation = Market Value / 1.1</inlineHelpText>
    <label>Agreement Value Deviation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>