force-app/main/default/objects/Unit__c/fields/Balcony_Area_Sq_Mtr__c.field-meta.xml
<CustomField>
    <fullName>Balcony_Area_Sq_Mtr__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Balcony Area (Sq. Mtr.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>