force-app/main/default/objects/Unit__c/fields/Built_up_Area_SqFt__c.field-meta.xml
<CustomField>
    <fullName>Built_up_Area_SqFt__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Built-up Area (SqFt)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>