force-app/main/default/objects/Unit__c/fields/Car_Park_Type_3__c.field-meta.xml
<CustomField>
    <fullName>Car_Park_Type_3__c</fullName>
    <label>Car Park Type 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>carparkType</valueSetName>
    </valueSet>
</CustomField>