force-app/main/default/objects/Unit__c/fields/Deck_Area__c.field-meta.xml
<CustomField>
    <fullName>Deck_Area__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Deck Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>