force-app/main/default/objects/Unit__c/fields/Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal Entity</label>
    <referenceTo>Legal_Entity__c</referenceTo>
    <relationshipLabel>Unit</relationshipLabel>
    <relationshipName>Unit</relationshipName>
    <type>Lookup</type>
</CustomField>