force-app/main/default/objects/Unit__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity__c</referenceTo>
    <relationshipLabel>Unit</relationshipLabel>
    <relationshipName>Unit</relationshipName>
    <type>Lookup</type>
</CustomField>