force-app/main/default/objects/Unit__c/fields/RERA_Carpet_Area_Sq_Mtr__c.field-meta.xml
<CustomField>
    <fullName>RERA_Carpet_Area_Sq_Mtr__c</fullName>
    <defaultValue>0</defaultValue>
    <label>RERA Carpet Area (Sq. Mtr.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>