force-app/main/default/objects/Unit__c/fields/Sale_Status__c.field-meta.xml
<CustomField>
    <fullName>Sale_Status__c</fullName>
    <label>Sale Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blocked</fullName>
            </value>
            <value>
                <fullName>Booked</fullName>
            </value>
            <value>
                <fullName>Refuge</fullName>
            </value>
            <value>
                <fullName>Reserved</fullName>
            </value>
            <value>
                <fullName>Vacant</fullName>
            </value>
            <value>
                <fullName>Available</fullName>
                <isActive>false</isActive>
                <label>Available</label>
            </value>
            <value>
                <fullName>Booking In-Process</fullName>
                <isActive>false</isActive>
                <label>Booking In-Process</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>