force-app/main/default/objects/Unit__c/fields/Saleable_Area__c.field-meta.xml
<CustomField>
    <fullName>Saleable_Area__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Saleable Area</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>