force-app/main/default/objects/Unit__c/fields/Sales_Status__c.field-meta.xml
<CustomField>
    <fullName>Sales_Status__c</fullName>
    <label>Sales Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vacant</fullName>
            </value>
            <value>
                <fullName>Blocked</fullName>
            </value>
            <value>
                <fullName>Booking-In-Process</fullName>
            </value>
            <value>
                <fullName>Booked</fullName>
            </value>
            <value>
                <fullName>Not for Sale</fullName>
                <isActive>false</isActive>
                <label>Not for Sale</label>
            </value>
            <value>
                <fullName>UnBlocked</fullName>
                <isActive>false</isActive>
                <label>UnBlocked</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>