force-app/main/default/objects/Unit__c/fields/Service_Slab__c.field-meta.xml
<CustomField>
    <fullName>Service_Slab__c</fullName>
    <label>Service Slab</label>
    <length>255</length>
    <type>Text</type>
</CustomField>