force-app/main/default/objects/Unit__c/fields/Site_Head_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Site_Head_Threshold__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Site Head Threshold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>