force-app/main/default/objects/Unit__c/fields/TL_Threshold__c.field-meta.xml
<CustomField>
    <fullName>TL_Threshold__c</fullName>
    <defaultValue>0</defaultValue>
    <label>TL Threshold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>