force-app/main/default/objects/Unit__c/fields/Unit_Blocked_By__c.field-meta.xml
<CustomField>
    <fullName>Unit_Blocked_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit Blocked By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Unit</relationshipName>
    <type>Lookup</type>
</CustomField>