force-app/main/default/objects/Unit__c/fields/Unit_Blocked_Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Unit_Blocked_Time_Stamp__c</fullName>
    <label>Unit Blocked Time Stamp</label>
    <type>DateTime</type>
</CustomField>