force-app/main/default/objects/Unit__c/fields/Unit_Blocking_Comment__c.field-meta.xml
<CustomField>
    <fullName>Unit_Blocking_Comment__c</fullName>
    <label>Unit Blocking Comment</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>