force-app/main/default/objects/Unit__c/fields/Unit_Info__c.field-meta.xml
<CustomField>
    <fullName>Unit_Info__c</fullName>
    <formula>Name + &apos;/&apos; + 
TEXT(Configuration__c) + &apos;/&apos; + 
TEXT(Total_Carpet_Area_Sq_Ft__c) + &apos;/&apos; + 
Booking__r.Primary_Applicant_Name__c</formula>
    <label>Inventory Unit Information</label>
    <type>Text</type>
</CustomField>