force-app/main/default/objects/Unit__c/fields/Unit_Status_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Unit_Status_Inventory__c</fullName>
    <formula>Name &amp; &quot; - &quot; &amp; TEXT(Configuration_Type__c) &amp;
IF(
ISPICKVAL(Sales_Status__c, &apos;Booked&apos;) || ISPICKVAL(Sales_Status__c, &apos;Blocked&apos;),
&quot;&quot;,
&quot; - &quot; &amp; TEXT( Total_carpet_Sq_Ft__c )
) &amp;
IF(
ISPICKVAL(Sales_Status__c, &apos;Booked&apos;),
IF(
NOT(ISBLANK(Booking__r.Primary_Applicant_Name__c)),
&quot; - &quot; &amp; Booking__r.Primary_Applicant_Name__c,
&quot;&quot;
),
IF(
ISPICKVAL(Sales_Status__c, &apos;Blocked&apos;),
IF(
NOT(ISBLANK(Opportunity__r.Name)),
&quot; - &quot; &amp; Opportunity__r.Name,
&quot;&quot;
),
&quot;&quot;
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Status (Inventory)</label>
    <type>Text</type>
</CustomField>