force-app/main/default/objects/Unit__c/fields/Unit_Unblocked_Comments__c.field-meta.xml
<CustomField>
    <fullName>Unit_Unblocked_Comments__c</fullName>
    <label>Unit Unblocked Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>